2006-11-04	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Post-release version bump.

2006-11-04	Benedikt Meurer <benny@xfce.org>

	* === Released 0.3.1.12rc2 ===
	* NEWS, configure.in.in: Bump version.
	* THANKS: Update translator credits.
	* po/*.po: Update Project-Id-Version.

2006-11-04	Benedikt Meurer <benny@xfce.org>

	* exo/exo-url.c(exo_url_show_on_screen): Need to escape commata in
	  URLs passed to web browsers and mail readers, because some of them,
	  i.e. Firefox and Thunderbird, will otherwise strip offs the part
	  after the last comma. Bug #2454.

2006-11-03	Benedikt Meurer <benny@xfce.org>

	* exo/exo-url.c: Underscore is a valid character for usernames.
	  Bug #2453.

2006-11-03	Benedikt Meurer <benny@xfce.org>

	* exo/exo-cell-renderer-icon.c(exo_cell_renderer_icon_render): Handle
	  internal icons properly. Bug #2488.

2006-10-30	Jean-François <pollux@xfce.org>

	* configure.in.in, docs/manual/fr,
	  docs/manual/fr/exo-preferred-applications.xml.in,
	  docs/manual/fr/images/, docs/manual/fr/Makefile.am,
	  docs/manual/Makefile.am, po-doc/LINGUAS, po-doc/fr.po,
	  po-doc/ChangeLog: Add French translations of the manual by Maximilian
	  Schleiss. Bug #2478.

2006-09-28	Benedikt Meurer <benny@xfce.org>

	* icons/24x24/, configure.in.in, icons/Makefile.am: Install the
	  preferences-desktop-default-applications.png in 24x24 as well.

2006-09-28	Benedikt Meurer <benny@xfce.org>

	* configure.in.in, exo-helper/Makefile.am: Fix installation on Win32
	  variants. Bug #2463.

2006-09-14	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_button_press_event): Fix double
	  click sometimes requiring a third click. Bug #2259.

2006-09-13	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_item_hit_test): Revert previous
	  change as it makes it too easy to accidently select files that you
	  do not wanted to selected, when in compact list mode.

2006-09-13	Benedikt Meurer <benny@xfce.org>
