@@ -1,3 +1,7 @@
+2006-11-11	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-url.c: Detect complex mailto:-URLs properly. Bug #2530.
+
 2006-11-04	Benedikt Meurer <benny@xfce.org>
 
 	* configure.in.in: Post-release version bump.
